--- a/Deployment/requirements.txt
+++ b/Deployment/requirements.txt
@@ -1,9 +1,8 @@
-streamlit
-pandas
-numpy
+tensorflow-cpu==2.12.0
+scikit-learn==1.2.2
+pandas==1.5.3
+numpy==1.23.5
+streamlit==1.25.0
 google-cloud-bigquery
 google-cloud-storage
-collections
 plotly
-scikit-learn
-tensorflow
