--- a/Deployment/requirements.txt
+++ b/Deployment/requirements.txt
@@ -1,273 +1,39 @@
 pip>=25.0.1
-absl-py==2.1.0
-aiohappyeyeballs==2.4.8
-aiohttp==3.11.13
-aiosignal==1.3.2
-altair==5.2.0
-annotated-types==0.6.0
-anyio==4.2.0
-appdirs==1.4.4
-arrow==1.3.0
-astor==0.8.1
-asttokens==2.4.0
-astunparse==1.6.3
-atpublic==5.1
-attrs==23.1.0
-backcall==0.2.0
-backoff==2.2.1
-beautifulsoup4==4.12.2
-bigframes==1.39.0
-blinker==1.9.0
-blis==0.7.11
-Brotli==1.1.0
-bs4==0.0.1
-cachetools==5.5.2
-catalogue==2.0.10
-certifi==2023.11.17
-charset-normalizer==3.3.2
-click==8.1.7
-cloudpathlib==0.16.0
-cloudpickle==3.1.1
-colorama==0.4.6
-comm==0.1.4
-confection==0.1.4
-contourpy==1.1.1
-cramjam==2.8.3
-cycler==0.12.1
-cymem==2.0.8
-dacite==1.8.1
-dash==2.15.0
-dash-bootstrap-components==1.3.1
-dash-core-components==2.0.0
-dash-html-components==2.0.0
-dash-table==5.0.0
-dash_colorscales==0.0.4
-dash_daq==0.5.0
-dateutils==0.6.12
-db-dtypes==1.4.1
-debugpy==1.8.0
-decorator==5.1.1
-Deprecated==1.2.18
-dtale==3.10.0
-duckdb==0.9.2
-en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl#sha256=86cc141f63942d4b2c5fcee06630fd6f904788d2f0ab005cce45aadb8fb73889
-et-xmlfile==1.1.0
-executing==2.0.0
-fastapi==0.109.0
-fastjsonschema==2.20.0
-fastparquet==2024.5.0
-filelock==3.16.1
-Flask==2.2.5
-Flask-Compress==1.14
-flask-ngrok==0.0.25
-flatbuffers==24.3.25
-fonttools==4.43.1
-frozenlist==1.5.0
-fsspec==2025.2.0
-future==1.0.0
-gast==0.6.0
-gcsfs==2025.2.0
-geopandas==1.0.1
-gitdb==4.0.12
-GitPython==3.1.44
-google==3.0.0
-google-api-core==2.24.1
-google-auth==2.38.0
-google-auth-oauthlib==1.2.1
-google-cloud-bigquery==3.30.0
-google-cloud-bigquery-connection==1.18.1
-google-cloud-bigquery-storage==2.28.0
-google-cloud-bigtable==2.29.0
-google-cloud-core==2.4.2
-google-cloud-functions==1.20.1
-google-cloud-iam==2.18.1
-google-cloud-pubsub==2.28.0
-google-cloud-resource-manager==1.14.1
-google-cloud-storage==3.1.0
-google-crc32c==1.6.0
-google-pasta==0.2.0
-google-resumable-media==2.7.2
-googleapis-common-protos==1.69.0
-greenlet==3.0.0
-grpc-google-iam-v1==0.14.1
-grpcio==1.70.0
-grpcio-status==1.70.0
-gw_dsl_parser==0.1.38
-h11==0.14.0
-h5py==3.12.1
-htmlmin==0.1.12
-huggingface-hub==0.26.2
-humanize==4.12.1
-idna==3.6
-ImageHash==4.3.1
-importlib-metadata==7.0.1
-ipykernel==6.25.2
-ipython==8.16.1
-ipywidgets==8.1.1
-itsdangerous==2.1.2
-jedi==0.19.1
-jellyfish==1.1.0
-Jinja2==3.1.2
-joblib==1.3.2
-jsonschema==4.20.0
-jsonschema-specifications==2023.12.1
-jupyter_client==8.4.0
-jupyter_core==5.4.0
-jupyterlab-widgets==3.0.9
-kaleido==0.2.1
-kanaries_track==0.0.3
-keras==3.6.0
-kiwisolver==1.4.5
-kneed==0.8.5
-langcodes==3.3.0
-libclang==18.1.1
-llvmlite==0.41.1
-lz4==4.3.3
-Markdown==3.7
-markdown-it-py==3.0.0
-MarkupSafe==2.1.3
-matplotlib==3.8.0
-matplotlib-inline==0.1.6
-mdurl==0.1.2
-missingno==0.5.2
-ml-dtypes==0.4.1
-monotonic==1.6
-mpmath==1.3.0
-multidict==6.1.0
-multimethod==1.11.1
-murmurhash==1.0.10
-mysql-connector-python==8.0.32
-namex==0.0.8
-nbformat==5.10.4
-nest-asyncio==1.5.8
-networkx==3.2.1
-nltk==3.8.1
-numba==0.58.1
-numpy==1.26.4
-oauthlib==3.2.2
-openpyxl==3.1.2
-opentelemetry-api==1.30.0
-opentelemetry-sdk==1.30.0
-opentelemetry-semantic-conventions==0.51b0
-opt_einsum==3.4.0
-optree==0.13.1
-packaging==23.2
+
 pandas==2.2.0
-pandas-gbq==0.28.0
-parso==0.8.3
-parsy==2.1
-patsy==0.5.6
-phik==0.12.4
-pickleshare==0.7.5
-Pillow==10.1.0
-platformdirs==3.11.0
-plotly==5.19.0
-preshed==3.0.9
-prompt-toolkit==3.0.39
-propcache==0.3.0
-proto-plus==1.26.0
-protobuf==5.28.3
-psutil==5.9.5
-psycopg2==2.9.9
-pure-eval==0.2.2
-py4j==0.10.9.7
-pyarrow==19.0.1
-pyasn1==0.6.1
-pyasn1_modules==0.4.1
-pydantic==2.5.3
-pydantic_core==2.14.6
-pydata-google-auth==1.9.1
-pydeck==0.9.1
-Pygments==2.16.1
-pygwalker==0.3.20
-PyMySQL==1.1.0
-pyogrio==0.10.0
-pyparsing==3.1.1
-pyproj==3.7.1
-pyspark==3.5.0
-python-dateutil==2.8.2
-pytz==2023.3.post1
-PyWavelets==1.5.0
-pywin32==306
-PyYAML==6.0.1
-pyzmq==25.1.1
-rake-nltk==1.0.6
-referencing==0.32.0
-regex==2023.12.25
-requests==2.31.0
-requests-oauthlib==2.0.0
-retrying==1.3.4
-rich==13.9.4
-rpds-py==0.16.2
-rsa==4.9
-safetensors==0.4.5
+numpy==1.26.4
 scikit-learn==1.3.2
 scipy==1.12.0
+matplotlib==3.8.0
 seaborn==0.12.2
-segment-analytics-python==2.2.3
-shapely==2.0.7
-six==1.16.0
-smart-open==6.4.0
-smmap==5.0.2
-sniffio==1.3.0
-soupsieve==2.5
+
+streamlit==1.43.1
+
+plotly==5.19.0
+dash==2.15.0
+dash-bootstrap-components==1.3.1
+
 spacy==3.7.4
 spacy-legacy==3.0.12
-spacy-loggers==1.0.5
-spark==0.2.1
-SQLAlchemy==2.0.22
-sqlglot==26.8.0
-squarify==0.4.3
-srsly==2.4.8
-stack-data==0.6.3
-starlette==0.35.1
-statsmodels==0.14.1
-streamlit==1.43.1
-strsimpy==0.2.1
-svgling==0.4.0
-svgwrite==1.4.3
-sympy==1.13.1
-tabulate==0.9.0
-tangled-up-in-unicode==0.2.0
-tenacity==8.2.3
-tensorboard==2.18.0
-tensorboard-data-server==0.7.2
-tensorflow==2.18.0
-tensorflow-io-gcs-filesystem==0.31.0
-tensorflow_intel==2.18.0
-termcolor==2.5.0
-tf_keras==2.18.0
-thinc==8.2.3
-threadpoolctl==3.2.0
-tokenizers==0.20.3
-toml==0.10.2
-toolz==0.12.0
-torch==2.5.1
-tornado==6.3.3
-tqdm==4.66.2
-traitlets==5.11.2
 transformers==4.46.2
-typeguard==4.1.5
-typer==0.9.0
-types-python-dateutil==2.8.19.14
-typing_extensions==4.8.0
-tzdata==2023.3
-urllib3==2.1.0
-uvicorn==0.27.0
-vboxapi==1.0
-visions==0.7.5
-wasabi==1.1.2
-wasmtime==12.0.0
-watchdog==6.0.0
-wcwidth==0.2.8
-weasel==0.3.4
-Werkzeug==3.0.1
-widgetsnbextension==4.0.9
+huggingface-hub==0.26.2
+
+nltk==3.8.1
+rake-nltk==1.0.6
 wordcloud==1.9.3
-wrapt==1.16.0
-xarray==2024.2.0
-xlrd==2.0.1
-XlsxWriter==3.1.9
-yarl==1.18.3
-ydata-profiling==4.6.4
-zipp==3.17.0
+
+Flask==2.2.5
+flask-ngrok==0.0.25
+sqlalchemy==2.0.22
+psycopg2==2.9.9
+requests==2.31.0
+pydantic==2.5.3
+fastapi==0.109.0
+uvicorn==0.27.0
+
+pyyaml==6.0.1
+pytest==7.0.1
+pip-tools==6.13.0
+
+joblib==1.3.2
+tqdm==4.66.2
